--- a/base/templates/base/activity_component.html
+++ b/base/templates/base/activity_component.html
@@ -2,7 +2,7 @@
 <link rel="stylesheet" href="{% static 'styles/activity_component.css' %}">
 
 <div class="recent-activity">
-    <h3>Recent Activity</h3>
+    <h3>Activities</h3>
     <hr>
     {% for message in room_messages %}
         <div class="activity-card">
