--- a/base/templates/base/feed_component.html
+++ b/base/templates/base/feed_component.html
@@ -3,21 +3,45 @@
 
 <div class="rooms-list">
     {% for room in rooms %}
-
-    <div class="room-card">
-        {% if request.user == room.host %}
-        <div class="room-actions">
-            <a href="{% url 'update-room' room.id %}" class="edit-btn">Edit</a>
-            <a href="{% url 'delete-room' room.id %}" class="delete-btn">Delete</a>
+    <div class="roomListRoom">
+        <div class="roomListRoom__header">
+            <a href="{% url 'user-profile' room.host.id %}" class="roomListRoom__author">
+                <div class="avatar avatar--small">
+                    {% if room.host.avatar %}
+                        <img src="{{ room.host.avatar.url }}" alt="Host Avatar">
+                    {% else %}
+                        <img src="{% static 'images/default-avatar.png' %}" alt="Default Avatar">
+                    {% endif %}
+                </div>
+                <span>@{{ room.host.username }}</span>
+            </a>
+            <div class="roomListRoom__actions">
+                <span>{{ room.created|timesince }} ago</span>
+            </div>
         </div>
-        {% endif %}
 
-        <div class="room-details">
-            <a href="{% url 'user-profile' room.host.id %}" class="room-host">@{{room.host.username}}</a>
-            <h5 class="room-title">{{room.id}} <a href="{% url 'room' room.id %}">{{room.name}}</a></h5>
-            <small class="room-topic">{{room.topic.name}}</small>
+        <div class="roomListRoom__content">
+            <a href="{% url 'room' room.id %}" class="room-title">{{ room.name }}</a>
+        </div>
+
+        <div class="roomListRoom__meta">
+            {% if request.user == room.host %}
+                <a href="{% url 'delete-room' room.id %}" class="styled-link">
+                    <img src="{% static 'images/trash.png' %}" alt="Delete Room" class="styled-image">
+                </a>   
+                <a href="{% url 'update-room' room.id %}" class="styled-link">
+                    <img src="{% static 'images/editing.png' %}" alt="Edit Room" class="styled-image">
+                </a>
+            {% endif %}
+            <div class="group-icon">
+                <a href="{% url 'room' room.id %}" class="styled-link">
+                <img src="{% static 'images/group.png' %}" alt="" class="styled-image">
+                {{ room.participants.all.count }} Joined
+                </a>
+            </div>
+                <p class="roomListRoom__topic">{{ room.topic.name }}</p>
+            
         </div>
     </div>
-
     {% endfor %}
 </div>
