--- a/base/templates/base/profile.html
+++ b/base/templates/base/profile.html
@@ -3,27 +3,51 @@
 
 {% block content %}
 
-<style>
-    .profile-container{
-        display: grid;
-        grid-template-columns: 1fr 3fr 1fr;
-    }
-</style>
+{% load static %}
+<link rel="stylesheet" href="{% static 'styles/profile.css' %}">
 
-<h1>{{user.username}}</h1>
-<div class="profile-container">
-        
-    <div>
-        {% include 'base/topic_component.html' %}
-    </div>
+<div class="profile-cont1">
 
-    <div>
-        {% include 'base/feed_component.html' %}
-    </div>
-
-    <div>
+    {% if posts %}
+    <div class="user-activity">
         {% include 'base/activity_component.html' %}
     </div>
+    {% endif %}
+
+    <div class="profile-cont2">
+    <div class="profile-cont">
+        
+        <div class="rounded-avatar">
+            <a href="{% url 'user-profile' user.id %}">
+                <img src="{{ request.user.avatar.url }}" alt="User Profile Picture" class="avatar">
+            </a>
+        </div>
+
+        <div class="profile-info">
+            <h3>{{user.username}}</h3>
+            {% if request.user == user %}
+            <a href="{% url 'update-user' %}" class="edit-profile">Edit Profile</a> 
+            {% endif %}
+        </div>
+
+        <div class="profile-about">
+            <h3>About {{user.username}}</h3>
+        <p>
+          {{user.bio}}
+        </p>
+        </div>
+ 
+    </div>
+    </div>
+
+    {% if posts %}
+        <div class="user-rooms">
+            <h2>Study Posts Hosted by Ian</h2>
+            {% include 'base/feed_component.html' %}
+
+        </div>
+    {% endif %}
+
 </div>
 
 {% endblock content %}
