--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -7,13 +7,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title></title>
 
     {% load static %}
-    <link rel="stylesheet" href="{% static 'styles/homee.css' %}">
+    <link rel="stylesheet" href="{% static 'styles/home-n.css' %}">
     <link rel="icon" href="{% static 'images/letter-f.png' %}">
 </head>
 <body>
+
+<div class="background">
+        
 
 <div class="home-container">
 
@@ -40,6 +43,8 @@
     <div class="activities">
         {% include 'base/activity_component.html' %}
     </div>
+
+</div>
 
 </div>
 
