--- a/base/templates/main.html
+++ b/base/templates/main.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Study Bud</title>
+    <title>Funza Hub Spot</title>
     {% load static %}
+    <link rel="icon" href="{% static 'images/letter-f.png' %}">
     <link rel="stylesheet" type="text/css" media="screen" href="{% static 'styles/main.css' %}">
 </head>
 <body>
