--- a/base/templates/navbar.html
+++ b/base/templates/navbar.html
@@ -5,17 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Funza</title>
     {% load static %}
-    <link rel="stylesheet" href="{% static 'styles/navbars.css' %}">
+    <link rel="stylesheet" href="{% static 'styles/navbar-n.css' %}">
     <link rel="icon" href="{% static 'images/letter-f.png' %}">
 </head>
 <body>
 
     <div class="navbar">
-        <a href="{% url 'home' %}" class="logo"> <img src="{% static 'images/letter-f.png' %}" alt="Funza" class="logo-image"> Funza</a>
+        <div class="search">
+            <a href="{% url 'home' %}" class="logo"> <img src="{% static 'images/letter-f.png' %}" alt="Funza" class="logo-image"> Funza Hub Spot</a>
 
-        <form method="GET" action="{% url 'home' %}" class="search-form">
-            <input type="text" name="q" placeholder="Search Rooms...">
-        </form>
+            <form method="GET" action="{% url 'home' %}" class="search-form">
+                <input type="text" name="q" placeholder="Search Rooms...">
+            </form>
+        </div>
 
         <div class="auth-links">
             {% if request.user.is_authenticated %}
