--- a/base/templates/base/activity_component.html
+++ b/base/templates/base/activity_component.html
@@ -1,5 +1,5 @@
 {% load static %}
-<link rel="stylesheet" href="{% static 'styles/activity_component.css' %}">
+<link rel="stylesheet" href="{% static 'styles/activityy_component.css' %}">
 
 <div class="recent-activity">
     <h3>Activities</h3>
@@ -7,8 +7,18 @@
     {% for message in room_messages %}
         <div class="activity-card">
             <small class="activity-info">
-                <a href="{% url 'user-profile' message.user.id %}" class="user-link">@{{message.user}}</a> 
+                <div class="avatar">
+                    {% if message.user.avatar %}
+                        <img src="{{ message.user.avatar.url }}" alt="User Avatar">
+                    {% else %}
+                        <img src="{% static 'images/default-avatar.png' %}" alt="Default Avatar">
+                    {% endif %}
+                    <a href="{% url 'user-profile' message.user.id %}" class="user-link"><span>@{{ message.user.username }}</span></a> 
+                </div>
+                <div class="avatar-1">
+                    
                 {{message.created|timesince}} ago,
+                </div>
             </small>
             <small class="activity-reply">replied to "{{message.room}}"</small>
             <p class="activity-message">{{message}}</p>
