--- a/static/styles/home-n.css
+++ b/static/styles/home-n.css
@@ -1,3 +1,12 @@
+.background {
+    background-image: linear-gradient(rgba(255, 0, 43, 0.178), rgba(255, 0, 43, 0.178)), url(/static/images/woo.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 700px;
+    margin: 0 -9px -5px -13px;
+}
+
 
 /* Layout for the home page */
 .home-container {
@@ -8,7 +17,7 @@
 }
 
 .home-container > div {
-    background-color: #f0b6b6;
+    background: #f0b6b644;
     padding: 20px;
     border-radius: 5px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -39,6 +48,7 @@
     background-color: #f18989; /* Background color for the section */
     padding: 20px; /* Add padding inside the container */
     border-radius: 8px; /* Rounded corners */
+    height: 0vh;
     display: flex;
     flex-direction: column; /* Stack elements vertically */
     align-items: center; /* Center-align items horizontally */
@@ -81,4 +91,15 @@
 .create-room-btn .add-post {
     width: 20px; /* Adjust the size of the image inside the button */
     height: 20px; /* Maintain aspect ratio */
+}
+
+
+/* Media Responsive */
+
+@media screen and (max-width: 800px) {
+    .home-container {
+        flex-direction: column;
+        align-items: flex-start;
+        width: 800px;
+    }
 }
