--- a/static/styles/navbar-n.css
+++ b/static/styles/navbar-n.css
@@ -14,14 +14,20 @@
     gap: 2px;
     text-decoration: none;
     font-size: 20px;
-    font-family: cursive;
+    font-family: cursive, sans-serif;
     font-weight: 600;
-    color: #fd3939;
+    color: #f70202;
 }
 
 .logo img {
     max-width: 40px; 
     height: auto;
+}
+
+.search {
+    display: flex;
+    flex-direction: row;
+    gap: 90px;
 }
 
 
@@ -90,4 +96,23 @@
     height: 50px; 
     object-fit: cover;
     display: block; 
+}
+
+
+/* Responsive Media */
+
+@media screen and (max-width: 800px) {
+    .navbar {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .search {
+        display: flex;
+        flex-direction: row;
+        gap: 50px;
+        margin-left: -10px;
+        margin-left: -100px;
+    }
 }
