--- a/base/templates/base/feed_component.html
+++ b/base/templates/base/feed_component.html
@@ -1,5 +1,5 @@
 {% load static %}
-<link rel="stylesheet" href="{% static 'styles/feed_component.css' %}">
+<link rel="stylesheet" href="{% static 'styles/feeds_component.css' %}">
 
 <div class="rooms-list">
     {% for room in rooms %}
