--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -26,7 +26,7 @@
 
     <div class="main-content">
         
-        <div class="create-room">
+        <div class="create--room">
             <h5> <img src="{% static 'images/add-post.png' %}" alt="Add Post" class="add-post"> {{ room_count }} available</h5>
             <a href="{% url 'create-room' %}" class="create-room-btn">
                 <img src="{% static 'images/add-post.png' %}" alt="Add Post" class="add-post">
