--- a/static/styles/home-n.css
+++ b/static/styles/home-n.css
@@ -3,7 +3,7 @@
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    height: 700px;
+    height: 100%;
     margin: 0 -9px -5px -13px;
 }
 
@@ -30,38 +30,25 @@
     color: #2782e9;
 }
 
-.create-room-btn{
-    text-decoration: none;
-    color: #f0b6b6;
-    background: #2782e9;
-    font-size: 16px;
-    font-family: cursive;
-    padding: 10px;
-    border-radius: 5px;
-}
 
-.create-room-btn:hover{
-    background: #4091ee;
-}
-
-.create-room {
+.create--room {
     background-color: #f18989; /* Background color for the section */
-    padding: 20px; /* Add padding inside the container */
-    border-radius: 8px; /* Rounded corners */
-    height: 0vh;
     display: flex;
-    flex-direction: column; /* Stack elements vertically */
-    align-items: center; /* Center-align items horizontally */
-    gap: 10px; /* Space between items */
-    text-align: center; /* Center-align text */
+    flex-direction: row;
+    justify-content: center;
+    padding: 10px;
+    gap: 200px;
+    border-radius: 5px;
+    align-items: center;
 }
 
-.create-room h5 {
+.create--room h5 {
     font-size: 18px; /* Font size for the header */
     color: #ffffff; /* Text color */
     display: flex;
     align-items: center; /* Center-align items within the header */
     gap: 8px; /* Space between the text and the image */
+    margin: -1px;
 }
 
 .add-post {
