--- a/base/templates/base/update-user.html
+++ b/base/templates/base/update-user.html
@@ -4,7 +4,7 @@
 
 {% load static %}
 
-<link rel="stylesheet" href="{% static 'styles/update-users.css' %}">
+<link rel="stylesheet" href="{% static 'styles/update-user.css' %}">
 
 <div class="edit-profile-1">
     <h3>Edit your profile</h3>
