--- a/base/templates/base/room_form.html
+++ b/base/templates/base/room_form.html
@@ -11,7 +11,7 @@
     <title>Styled Form</title>
     
     {% load static %}
-    <link rel="stylesheet" href="{% static 'styles/rooms_form.css' %}">
+    <link rel="stylesheet" href="{% static 'styles/rooms_forms.css' %}">
 </head>
 <body>
     <div class="room-cont">
